# paper_SPHDEMvariational

./: CMakeLists.txt  README.md  post_process.py  run.py
src/: GammaEval.cpp  GammaEval.h  multiple_particle.cpp  single_particle.cpp  sphdem.h
